fix: fix slider buttons on mobile resolution

--- a/shelter/src/sass/components/_slider.scss
+++ b/shelter/src/sass/components/_slider.scss
@@ -87,6 +87,7 @@
   .slider__items {
     justify-content: space-evenly;
     gap: 40px;
+    flex: 1 0 100%;
   }
 
   .item-slider {
